--- a/CareerFlow.Core/src/CareerFlow.Core.Api/appsettings.Development.json
+++ b/CareerFlow.Core/src/CareerFlow.Core.Api/appsettings.Development.json
@@ -11,6 +11,7 @@
     "Audience": "FreelanceAppUsers"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=carrerflow_db;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=carrerflow_db;Username=postgres;Password=postgres",
+    "Redis": "localhost:6379"
   }
 }
