--- a/CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/CarrerFlow.Core.Infrastructure.csproj
+++ b/CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/CarrerFlow.Core.Infrastructure.csproj
@@ -22,6 +22,7 @@
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
 		<PackageReference Include="Shared.Infra" Version="1.0.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
