--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,23 @@
 /CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/bin/Debug/net10.0
 /CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/obj
 /CareerFlow.Core/nuget.config
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/bin/Debug/net10.0
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/ref/CareerFlow.Rabbit.Events.dll
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/refint/CareerFlow.Rabbit.Events.dll
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.assets.cache
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.csproj.CoreCompileInputs.cache
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.csproj.FileListAbsolute.txt
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.dll
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.pdb
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.sourcelink.json
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.dgspec.json
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.g.props
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.g.targets
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/project.assets.json
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/project.nuget.cache
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
+/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
