--- a/CareerFlow.Core/src/CareerFlow.Core.Api/CareerFlow.Core.Api.csproj
+++ b/CareerFlow.Core/src/CareerFlow.Core.Api/CareerFlow.Core.Api.csproj
@@ -12,6 +12,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BouncyCastle.Cryptography" Version="2.6.2" />
+		<PackageReference Include="Infisical.IConfigurationProvider" Version="0.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2">
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
