fix naminb and refactor

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/obj
+/CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/bin/Debug/net10.0
+/CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj
