--- a/CareerFlow.Core/src/CareerFlow.Core.Api/CareerFlow.Core.Api.csproj
+++ b/CareerFlow.Core/src/CareerFlow.Core.Api/CareerFlow.Core.Api.csproj
@@ -24,8 +24,9 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\CareerFlow.Core.Application\CareerFlow.Core.Application.csproj" />
-		<ProjectReference Include="..\CareerFlow.Rabbit.Events\CareerFlow.Rabbit.Events.csproj" />
-		<ProjectReference Include="..\CarrerFlow.Core.Infrastructure\CareerFlow.Core.Infrastructure.csproj" />
+		<ProjectReference Include="..\CareerFlow.Core.Infrastructure\CareerFlow.Core.Infrastructure.csproj" />
+		<ProjectReference Include="..\CareerFlow.Core.Rabbit.Events\CareerFlow.Core.Rabbit.Events.csproj" />
+		<ProjectReference Include="..\CareerFlow.Rabbit.Events\CareerFlow.Core.Rabbit.Events.csproj" />
 	</ItemGroup>
 
 </Project>
