--- a/CareerFlow.Core/src/CareerFlow.Core.Api/appsettings.Development.json
+++ b/CareerFlow.Core/src/CareerFlow.Core.Api/appsettings.Development.json
@@ -15,5 +15,9 @@
 
   },
   "RabbitMQ": {
+  },
+  "PostmarkSettings": {
+    "FromAddress": "contact@carerflow-api.ro",
+    "FromName": "CareerFlow"
   }
 }
