update code to fix email sending

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj
 CareerFlow.UI/.vscode/extensions.json
 CareerFlow.UI/.vscode/settings.json
+CareerFlow.Core/.vscode/settings.json
