--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-﻿################################################################################
+﻿
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -36,3 +37,6 @@
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/obj
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj
+CareerFlow.UI/.vscode/extensions.json
+CareerFlow.UI/.vscode/settings.json
+CareerFlow.Core/.vscode/settings.json
