feat: Update CareerFlow API and infrastructure
- Added Microsoft.VisualStudio.Azure.Containers.Tools.Targets package to the API project.
- Updated Dockerfile to correct project paths for Rabbit Events and Infrastructure.
- Enhanced appsettings.json with JWT settings, connection strings, authentication, RabbitMQ, and Postmark settings.
- Modified ApplicationDbContextModelSnapshot to enforce string length constraints on the Name property.
- Removed obsolete Rabbit Events project files.
- Created new migration files for database schema changes, including updates to the Accounts and LegalDocs tables.
- Introduced docker-compose.infra.yml for managing PostgreSQL, RabbitMQ, and Redis services with health checks.
- Added docker-compose.yml to define the CareerFlow API service and its dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,27 @@
-﻿
-################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
-
-/CareerFlow.Core/.vs
-/CareerFlow.Core/src/CareerFlow.Core.Domain/obj
+CareerFlow.Core/nuget.config
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/DesignTimeBuild/.dtbcache.v2
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/.futdcache.v2
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/.suo
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/b807cf22-a6ff-4607-8d65-d3ae3f8ad41b.vsidx
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/471831a3-3818-4853-ad32-78730b0ff87e.vsidx
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/933d4e41-f70b-4faf-b571-13eef0cb139d.vsidx
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/0487e3ad-96d2-46b4-ba0e-a0e9d362e1a6.vsidx
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/8ac73714-ff88-4aa7-9a26-9ee9980e922f.vsidx
+CareerFlow.Core/.vs/ProjectEvaluation/careerflow.core.metadata.v10.bin
+CareerFlow.Core/.vs/ProjectEvaluation/careerflow.core.projects.v10.bin
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/DocumentLayout.json
+CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/DocumentLayout.backup.json
+CareerFlow.Core/.vs/ProjectEvaluation/careerflow.core.strings.v10.bin
 /CareerFlow.Core/src/CareerFlow.Core.Api/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Api/obj
 /CareerFlow.Core/src/CareerFlow.Core.Application/bin/Debug/net10.0
+/CareerFlow.Core/src/CareerFlow.Core.Application/obj/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Application/obj
 /CareerFlow.Core/src/CareerFlow.Core.Domain/bin/Debug/net10.0
-/CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/bin/Debug/net10.0
-/CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/obj
-/CareerFlow.Core/nuget.config
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/bin/Debug/net10.0
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/ref/CareerFlow.Rabbit.Events.dll
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/refint/CareerFlow.Rabbit.Events.dll
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.assets.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.csproj.CoreCompileInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.csproj.FileListAbsolute.txt
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.dll
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.pdb
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.sourcelink.json
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.dgspec.json
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.g.props
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.g.targets
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/project.assets.json
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/project.nuget.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
+/CareerFlow.Core/src/CareerFlow.Core.Domain/obj/Debug/net10.0
+/CareerFlow.Core/src/CareerFlow.Core.Domain/obj
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/obj
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/bin/Debug/net10.0
+/CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj
-CareerFlow.UI/.vscode/extensions.json
-CareerFlow.UI/.vscode/settings.json
-CareerFlow.Core/.vscode/settings.json
