--- a/CareerFlow.Core/src/CareerFlow.Core.Api/appsettings.json
+++ b/CareerFlow.Core/src/CareerFlow.Core.Api/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Issuer": "FreelanceApp",
+    "Audience": "FreelanceAppUsers"
+  },
+  "ConnectionStrings": {
+  },
+  "Authentication": {
+
+  },
+  "RabbitMQ": {
+  },
+  "PostmarkSettings": {
+    "FromAddress": "contact@carerflow-api.ro",
+    "FromName": "CareerFlow"
+  }
 }
