--- a/CareerFlow.Core/src/CareerFlow.Core.Api/CareerFlow.Core.Api.csproj
+++ b/CareerFlow.Core/src/CareerFlow.Core.Api/CareerFlow.Core.Api.csproj
@@ -18,6 +18,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
 		<PackageReference Include="Shared.Api" Version="1.1.0" />
 	</ItemGroup>
 
