--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,13 @@
-CareerFlow.Core/nuget.config
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/DesignTimeBuild/.dtbcache.v2
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/.futdcache.v2
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/.suo
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/b807cf22-a6ff-4607-8d65-d3ae3f8ad41b.vsidx
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/471831a3-3818-4853-ad32-78730b0ff87e.vsidx
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/933d4e41-f70b-4faf-b571-13eef0cb139d.vsidx
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/0487e3ad-96d2-46b4-ba0e-a0e9d362e1a6.vsidx
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/FileContentIndex/8ac73714-ff88-4aa7-9a26-9ee9980e922f.vsidx
-CareerFlow.Core/.vs/ProjectEvaluation/careerflow.core.metadata.v10.bin
-CareerFlow.Core/.vs/ProjectEvaluation/careerflow.core.projects.v10.bin
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/DocumentLayout.json
-CareerFlow.Core/.vs/CareerFlow.Core.slnx/v18/DocumentLayout.backup.json
-CareerFlow.Core/.vs/ProjectEvaluation/careerflow.core.strings.v10.bin
+﻿/CareerFlow.Core/.vs
 /CareerFlow.Core/src/CareerFlow.Core.Api/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Api/obj
 /CareerFlow.Core/src/CareerFlow.Core.Application/bin/Debug/net10.0
-/CareerFlow.Core/src/CareerFlow.Core.Application/obj/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Application/obj
 /CareerFlow.Core/src/CareerFlow.Core.Domain/bin/Debug/net10.0
-/CareerFlow.Core/src/CareerFlow.Core.Domain/obj/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Domain/obj
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/obj
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/bin/Debug/net10.0
-/CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj
+/CareerFlow.Core/nuget.config
+/.env
