--- a/docker-compose.infra.yml
+++ b/docker-compose.infra.yml
@@ -2,8 +2,8 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: CareerFlow_Db
     ports:
       - "5432:5432"
