feat: Update CareerFlow API and infrastructure (#5)
* feat: Update CareerFlow API and infrastructure

- Added Microsoft.VisualStudio.Azure.Containers.Tools.Targets package to the API project.
- Updated Dockerfile to correct project paths for Rabbit Events and Infrastructure.
- Enhanced appsettings.json with JWT settings, connection strings, authentication, RabbitMQ, and Postmark settings.
- Modified ApplicationDbContextModelSnapshot to enforce string length constraints on the Name property.
- Removed obsolete Rabbit Events project files.
- Created new migration files for database schema changes, including updates to the Accounts and LegalDocs tables.
- Introduced docker-compose.infra.yml for managing PostgreSQL, RabbitMQ, and Redis services with health checks.
- Added docker-compose.yml to define the CareerFlow API service and its dependencies.

* fix: update PostgreSQL environment variables to use dynamic values

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,13 @@
-﻿
-################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
-
-/CareerFlow.Core/.vs
-/CareerFlow.Core/src/CareerFlow.Core.Domain/obj
+﻿/CareerFlow.Core/.vs
 /CareerFlow.Core/src/CareerFlow.Core.Api/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Api/obj
 /CareerFlow.Core/src/CareerFlow.Core.Application/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Application/obj
 /CareerFlow.Core/src/CareerFlow.Core.Domain/bin/Debug/net10.0
-/CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/bin/Debug/net10.0
-/CareerFlow.Core/src/CarrerFlow.Core.Infrastructure/obj
-/CareerFlow.Core/nuget.config
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/bin/Debug/net10.0
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/ref/CareerFlow.Rabbit.Events.dll
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/refint/CareerFlow.Rabbit.Events.dll
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.assets.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.csproj.CoreCompileInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.csproj.FileListAbsolute.txt
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.dll
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.pdb
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.sourcelink.json
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.dgspec.json
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.g.props
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/CareerFlow.Rabbit.Events.csproj.nuget.g.targets
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/project.assets.json
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/project.nuget.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfoInputs.cache
-/CareerFlow.Core/src/CareerFlow.Rabbit.Events/obj/Debug/net10.0/CareerFlow.Rabbit.Events.AssemblyInfo.cs
+/CareerFlow.Core/src/CareerFlow.Core.Domain/obj
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Infrastructure/obj
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/bin/Debug/net10.0
 /CareerFlow.Core/src/CareerFlow.Core.Rabbit.Events/obj
-CareerFlow.UI/.vscode/extensions.json
-CareerFlow.UI/.vscode/settings.json
-CareerFlow.Core/.vscode/settings.json
+/CareerFlow.Core/nuget.config
+/.env
